--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -32,9 +32,12 @@ android {
 
     buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
+            // Configuración de firma para la compilación de lanzamiento.
             signingConfig = signingConfigs.debug
+            // Habilitar la minificación de código para reducir el tamaño de la APK.
+            minifyEnabled true
+            // Configuración de ProGuard para la compilación de lanzamiento.
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
 }
